--- a/boards/sg200x/sg2000_duo_sd/dts_riscv/sg2000_duo_sd.dts
+++ b/boards/sg200x/sg2000_duo_sd/dts_riscv/sg2000_duo_sd.dts
@@ -1,7 +1,7 @@
 /dts-v1/;
 #include "soph_base_riscv.dtsi"
 #include "soph_asic_bga.dtsi"
-#include "soph_asic_emmc.dtsi"
+#include "soph_asic_sd.dtsi"
 #include "soph_default_memmap.dtsi"
 
 / {
