--- a/boards/sg200x/sg2000_duo_sd/sg2000_duo_sd_defconfig
+++ b/boards/sg200x/sg2000_duo_sd/sg2000_duo_sd_defconfig
@@ -1,15 +1,15 @@
 CONFIG_CHIP_sg2000=y
-CONFIG_BOARD_wevb_emmc=y
+CONFIG_BOARD_duo_sd=y
 CONFIG_DDR_CFG_ddr3_1866_x16=y
 CONFIG_ARCH="riscv"
-CONFIG_CROSS_COMPILE="riscv64-unknown-linux-gnu-"
+CONFIG_CROSS_COMPILE="riscv64-unknown-linux-musl-"
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_KERNEL_ENTRY_HACK=y
 CONFIG_KERNEL_ENTRY_HACK_ADDR="0x80200000"
 CONFIG_TOOLCHAIN_MUSL_RISCV64=y
 CONFIG_FLASH_SIZE_SHRINK=y
 CONFIG_BOOT_IMAGE_SINGLE_DTB=y
-CONFIG_STORAGE_TYPE_emmc=y
+CONFIG_STORAGE_TYPE_sd=y
 CONFIG_SENSOR_GCORE_GC4653=y
 CONFIG_SENSOR_SMS_SC3335=y
 CONFIG_SENSOR_SMS_SC500AI=y
@@ -25,17 +25,14 @@ CONFIG_UBOOT_2021_10=y
 CONFIG_KERNEL_SRC_5.10=y
 CONFIG_KERNEL_LZMA=y
 CONFIG_SKIP_RAMDISK=y
-CONFIG_TARGET_PACKAGE_PARTED=y
-CONFIG_TARGET_PACKAGE_E2FSPROGS=y
-CONFIG_TARGET_PACKAGE_ENVTOOLS=y
-# CONFIG_TARGET_PACKAGE_GATORD is not set
 CONFIG_SENSOR_TUNING_PARAM_cv181x_src_gcore_gc4653=y
 # CONFIG_ROOTFS_OVERLAYFS is not set
 CONFIG_TARGET_PACKAGE_DROPBEAR=y
-# CONFIG_TARGET_PACKAGE_MTD-UTILS is not set
+CONFIG_TARGET_PACKAGE_MTD-UTILS=y
 # CONFIG_TARGET_PACKAGE_RSYSLOG is not set
-# CONFIG_TARGET_PACKAGE_BUSYBOX_SYSLOGD_SCRIPT is not set
+CONFIG_TARGET_PACKAGE_BUSYBOX_SYSLOGD_SCRIPT=y
 CONFIG_ENABLE_FREERTOS=y
 CONFIG_ENABLE_RTOS_DUMP_PRINT=y
 CONFIG_DUMP_PRINT_SZ_IDX=17
+# CONFIG_TARGET_PACKAGE_GATORD is not set
 CONFIG_TARGET_PACKAGE_NTP=y
