--- a/boards/sg200x/sg2002_milkv_duo_256m_sd/sg2002_milkv_duo_256m_sd_defconfig
+++ b/boards/sg200x/sg2002_milkv_duo_256m_sd/sg2002_milkv_duo_256m_sd_defconfig
@@ -1,5 +1,5 @@
 CONFIG_CHIP_sg2002=y
-CONFIG_BOARD_duo_sd=y
+CONFIG_BOARD_milkv_duo256m_sd=y
 CONFIG_DDR_CFG_ddr3_1866_x16=y
 CONFIG_ARCH="riscv"
 CONFIG_CROSS_COMPILE="riscv64-unknown-linux-musl-"
