--- a/Kconfig
+++ b/Kconfig
@@ -229,11 +229,9 @@ config FLASH_SIZE_SHRINK
 
 config CP_EXT_WIRELESS
 	bool "Install the osdrv/extdrv/wireless/*.ko"
-	depends on FLASH_SIZE_SHRINK
 	default n
 	help
-      Install the osdrv/extdrv/wireless/*.ko no matter
-	  FLASH_SIZE_SHRINK is set or not.
+          Install the osdrv/extdrv/wireless/*.ko no matter
 
 config NO_FB
 	bool "Do not compile frame buffer drivers"
@@ -485,6 +483,12 @@ config ROOTFS_OVERLAYFS
 	default y
 	help
 	  Enable rootfs with overlayfs.
+
+config BUILDROOT_FS
+        bool "Enable buildroot generate rootfs"
+        default y
+        help
+          Enable buildroot generate rootfs.
 
 config USE_4K_ERASE_SIZE_FOR_JFFS2
 	bool "Use 4K erase size for jffs2 filesystem"
