Enable WG and TUN for lichee rv nano

--- a/boards/sg200x/sg2002_licheervnano_sd/linux/sg2002_licheervnano_sd_defconfig
+++ b/boards/sg200x/sg2002_licheervnano_sd/linux/sg2002_licheervnano_sd_defconfig
@@ -572,3 +572,7 @@ CONFIG_BACKLIGHT_PWM=m
 CONFIG_EPOLL=y
 CONFIG_IO_URING=y
 CONFIG_SIGNALFD=y
+#TUN and WG
+CONFIG_NET_CORE=y
+CONFIG_WIREGUARD=y
+CONFIG_TUN=y
